# opencode-mem

./: .gitignore  README.md  deploy.sh  generate-api-key.sh
.trae/documents/: 插件和后端接口匹配核对计划.md
backend/: TESTING.md  pyproject.toml  start.sh  test_api.sh  test_intelligent_api.sh  test_user_id_fix.sh
backend/examples/: basic_usage.py  example_ollama_integration.py  test_basic.py
backend/src/: main.py
backend/src/api/: auth.py  routes.py
backend/src/models/: schemas.py
backend/src/opencode_mem0/: __init__.py  config.py  plugin.py
backend/src/services/: intelligent_memory_service.py  memory_cache.py  memory_metrics.py  memory_queue.py  memory_service.py
backend/tests/: test_intelligent_memory.py  test_plugin.py
docs/: API.md  API_TESTING.md  AUTH.md  CODE_REVIEW_AND_FIXES.md  DEPLOYMENT.md  INTELLIGENT_MEMORY_FIX.md  INTELLIGENT_MEMORY_IMPLEMENTATION.md
plugin/: README.md  build.sh  package-lock.json  package.json  tsconfig.json
plugin/src/: client.ts  index.ts
plugin/src/tools/: memory_add.ts  memory_delete.ts  memory_get_all.ts  memory_history.ts  memory_search.ts  memory_update.ts
