[project]
name = "opencode-mem0-backend"
version = "0.1.0"
description = "FastAPI backend for OpenCode mem0 memory plugin"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "mem0ai>=0.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_mem0", "src/api", "src/services", "src/models"]

[project.scripts]
start-backend = "src.main:main"